deploy/storage/ceph-objectstore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rgw-main
  namespace: rook-ceph
  annotations:
    kube-score/ignore: ingress-targets-service
spec:
  rules:
    - host: s3.smol.lan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-main
                port:
                  number: 80
